# Home_work_1

./: .flake8  README.md  pyproject.toml  transactions_excel.xlsx
data/: copy.py  copy2.py  mylog.txt
generators/: filter_by_currency.py  test_filter_by_currency1.py
src/: cvs_xlsx.py  decorators.py  external_api.py  generators.py  main.py  masks.py  processing.py  seach_with_re.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_filter_by_currency.py  test_masks.py  test_processing.py  test_read_csv_transactions.py  test_read_transaction_excel.py  test_utils.py  test_widget.py
